[package]
name = "sergio"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.25.0", features = ["macros", "signal", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features=false, features = ["client", "gateway", "rustls_backend", "model"]}